# copilot-rs

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
examples/: agent.rs  function.rs
macro/: Cargo.toml  LICENSE
macro/src/: lib.rs
src/: lib.rs  main.rs  types.rs
