[package]
name = "copilot-rs"
version = "0.1.2"
edition = "2021"
description = "A Rust SDK for interacting with chat models, providing easy-to-use functions and tools."
categories = ["development-tools"]
keywords = ["rust", "chat-model", "sdk", "function-tools", "macro"]
repository = "https://github.com/ZhouXiaolin/copilot-rs.git"
authors = ["Solaren <zhouxiaolinux@gmail.com>"]
license = "MIT"
readme = "README.md"

[features]
default = ["macro"]
macro = ["copilot-rs-macro"]

[dependencies]
anyhow = "1.0.93"
copilot-rs-macro = { version = "0.1.2", path = "macro", optional = true }
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["stream", "blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
typed-builder = "0.20.0"
copilot-rs-core = { version = "0.1.0", path = "core"}


# [workspace]
# members = ["macro", "core"]
