[package]
name = "copilot-rs-macro"
version = "0.1.2"
edition = "2021"
description = "A Rust SDK for interacting with chat models, providing easy-to-use functions and tools."
categories = ["development-tools"]
keywords = ["rust", "chat-model", "sdk", "function-tools", "macro"]
repository = "https://github.com/ZhouXiaolin/copilot-rs.git"
authors = ["Solaren <zhouxiaolinux@gmail.com>"]
license = "MIT"
readme = "README.md"
[lib]
proc-macro = true

[dependencies]
quote = { version = "1", default-features = false }
syn = { version = "2.0.89", default-features = false, features = [
    "full",
    "parsing",
    "printing",
] }
serde_json = "1.0.128"
darling = "0.20.10"
anyhow = "1.0.93"
fastrand = "2.2.0"
copilot-rs-core = { version = "0.1.0", path = "../core"}

